# wasm_project

./: README.md
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: index.html  index.js  wasm_game_of_life_bg.wasm
