[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Jordan <jbyrd23@stanford.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'Node',
  'Window'
]


